fix spacing for hamburger dropdown-profile and search

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -184,9 +184,9 @@ body {
 .icon-3 {
   top: 43px;
   position: absolute;
-  width: 40px;
+  width: 35px;
   height: 2.5px;
-  right: 10vw;
+  right: 11vw;
   background-color: black;
   transition: all 0.2s cubic-bezier(0.84, 0.06, 0.52, 1.8);
 }
@@ -220,15 +220,14 @@ body {
   position: absolute;
   top: 100px;
   right: 9vw;
-  opacity: 0;
+  visibility: hidden;
   display: flex;
-  /* flex-direction: column; */
-  justify-content: center;
+  /* justify-content: center; */
   z-index: 1000;
 }
 
 .headerpage-hamburger-dropdown.hamburger-open {
-  opacity: 1;
+  visibility: visible;
 }
 
 .headerpage-hamburger-dropdown ul,
@@ -283,10 +282,6 @@ body {
 .hamburger-search-container {
   position: relative;
 }
-.hamburger-search-container .search-open {
-  background-color: white;
-  border: 2px solid black;
-}
 .hamburger-search-icon {
   background-color: white;
   padding: 10px 9px 10px 11px;
@@ -300,17 +295,21 @@ body {
   display: flex;
   align-items: center;
   top: -1px;
-  display: none;
+  right: 20px;
 }
 
-.hamburger-dropdown-search-container input {
+.hamburger-dropdown-search-container {
   border: 2px solid rgb(0, 0, 0);
   border-radius: 40px;
   box-sizing: border-box;
   padding: 15px 15px 15px 16px;
   outline: none;
+  visibility: hidden;
 }
 
+.hamburger-dropdown-search-container .search-open {
+  visibility: visible;
+}
 .hamburger-dropdown-search-container .hamburger-dropdown-search-icon {
   position: absolute;
   right: 13px;
@@ -326,21 +325,22 @@ body {
 
 .hamburger-create-icon {
   background-color: white;
-  padding: 15px 17px;
+  padding: 13px 16px;
   border: 2px solid black;
   border-radius: 50px;
+  cursor: pointer;
 }
 
 .hamburger-create-icon img {
-  align-items: center;
+  padding-top: 2px;
 }
 
 /* 햄버거 드롭다운 마이페이지 */
 .hamburger-profile-container {
-  margin: 2px 0 0 6px;
-  width: 30px;
-  height: 30px;
-  padding: 7px;
+  margin-top: 4px;
+  width: 29px;
+  height: 29px;
+  padding: 8px;
   overflow: hidden;
   border-radius: 50%;
   display: flex;
@@ -351,10 +351,12 @@ body {
 }
 
 .hamburger-login-button {
+  margin-top: 4px;
   background-color: white;
   padding: 15px 7px;
   border: 2px solid black;
   border-radius: 60px;
+  cursor: pointer;
 }
 
 .hamburger-profile-dropdown-menu {
@@ -368,7 +370,8 @@ body {
   .headerpage-header-container {
     padding: 10px 2vw;
   }
-  .headerpage-header-logo {
+  .headerpage-header-logo,
+  .headerpage-hamburger-dropdown.hamburger-open {
     display: none;
   }
 }
@@ -384,6 +387,7 @@ body {
   .headerpage-header-container {
     padding: 10px 2vw;
   }
+
   .headerpage-hamburger-icon {
     display: block;
   }
